--- a/.skhdrc
+++ b/.skhdrc
@@ -120,24 +120,48 @@ alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
 # 交换窗口
-shift + alt - h : yabai -m window --swap west
-shift + alt - j : yabai -m window --swap south
-shift + alt - k : yabai -m window --swap north
-shift + alt - l : yabai -m window --swap east
+alt + shift - h : yabai -m window --swap west
+alt + shift - j : yabai -m window --swap south
+alt + shift - k : yabai -m window --swap north
+alt + shift - l : yabai -m window --swap east
 
 # 移动窗口
-shift + alt + ctrl - h : yabai -m window --warp west
-shift + alt + ctrl - h : yabai -m window --warp south
-shift + alt + ctrl - h : yabai -m window --warp north
-shift + alt + ctrl - h : yabai -m window --warp east
+alt + shift + ctrl - h : yabai -m window --warp west
+alt + shift + ctrl - j : yabai -m window --warp south
+alt + shift + ctrl - k : yabai -m window --warp north
+alt + shift + ctrl - l : yabai -m window --warp east
+
+# 改变窗口大小
+# 上面窗口 -20 大小 , 相当于当前窗口 +20 向上
+alt + ctrl - k : yabai -m window --resize top:0:-20
+# 上面窗口+20  ， 相当于是上面窗口 +20 向下
+alt + ctrl - j : yabai -m window --resize top:0:20
+# 左边窗口 -20 ，
+alt + ctrl - h : yabai -m window --resize left:-20:0
+alt + ctrl - l : yabai -m window --resize left:20:0
+
+# 移动窗口至特定桌面
+alt + shift - 1 : yabai -m window --space 1; yabai -m space --focus 1
+alt + shift - 2 : yabai -m window --space 2; yabai -m space --focus 2
+alt + shift - 3 : yabai -m window --space 3; yabai -m space --focus 3
+alt + shift - 4 : yabai -m window --space 4; yabai -m space --focus 4
+alt + shift - 5 : yabai -m window --space 5; yabai -m space --focus 5
+alt + shift - 6 : yabai -m window --space 6; yabai -m space --focus 6
+alt + shift - 7 : yabai -m window --space 7; yabai -m space --focus 7
+alt + shift - 8 : yabai -m window --space 8; yabai -m space --focus 8
+alt + shift - 9 : yabai -m window --space 9; yabai -m space --focus 9
+
+
+
+
 
 # 移动至 显示器
 # Focus display focused before the current one (so you can alternate)
 # ctrl + alt : yabai -m display --focus recent
 # Focus previous display by arrangement index
-ctrl + alt - h : yabai -m display --focus prev
+ctrl + shift - h : yabai -m display --focus prev
 # Focus next display by arrangement index
-ctrl + alt - l : yabai -m display --focus next
+ctrl + shift - l : yabai -m display --focus next
 
 # 旋转窗口布局
 alt - r : yabai -m space --rotate 90
@@ -157,25 +181,3 @@ alt - e : yabai -m window --toggle split
 
 # 重置窗口布局
 shift + alt - 0 : yabai -m space --balance
-
-# 移动窗口至特定桌面
-shift + alt - 1 : yabai -m window --space 1; yabai -m space --focus 1
-shift + alt - 2 : yabai -m window --space 2; yabai -m space --focus 2
-shift + alt - 3 : yabai -m window --space 3; yabai -m space --focus 3
-shift + alt - 4 : yabai -m window --space 4; yabai -m space --focus 4
-shift + alt - 5 : yabai -m window --space 5; yabai -m space --focus 5
-shift + alt - 6 : yabai -m window --space 6; yabai -m space --focus 6
-shift + alt - 7 : yabai -m window --space 7; yabai -m space --focus 7
-shift + alt - 8 : yabai -m window --space 8; yabai -m space --focus 8
-shift + alt - 9 : yabai -m window --space 9; yabai -m space --focus 9
-
-
-
-# 改变窗口大小
-# 上面窗口 -20 大小 , 相当于当前窗口 +20 向上
-ctrl + shift - k : yabai -m window --resize top:0:-20
-# 上面窗口+20  ， 相当于是上面窗口 +20 向下
-ctrl + shift - j : yabai -m window --resize top:0:20
-# 左边窗口 -20 ，
-ctrl + shift - h : yabai -m window --resize left:-20:0
-ctrl + shift - l : yabai -m window --resize left:20:0
