--- a/.skhdrc
+++ b/.skhdrc
@@ -120,16 +120,16 @@ alt - k : yabai -m window --focus north
 alt - l : yabai -m window --focus east
 
 # 交换窗口
-alt + shift - h : yabai -m window --swap west
-alt + shift - j : yabai -m window --swap south
-alt + shift - k : yabai -m window --swap north
-alt + shift - l : yabai -m window --swap east
-
+# alt + shift - h : yabai -m window --swap west
+# alt + shift - j : yabai -m window --swap south
+# alt + shift - k : yabai -m window --swap north
+# alt + shift - l : yabai -m window --swap east
+#
 # 移动窗口
-alt + shift + ctrl - h : yabai -m window --warp west
-alt + shift + ctrl - j : yabai -m window --warp south
-alt + shift + ctrl - k : yabai -m window --warp north
-alt + shift + ctrl - l : yabai -m window --warp east
+# alt + shift + ctrl - h : yabai -m window --warp west
+# alt + shift + ctrl - j : yabai -m window --warp south
+# alt + shift + ctrl - k : yabai -m window --warp north
+# alt + shift + ctrl - l : yabai -m window --warp east
 
 # 改变窗口大小
 # 上面窗口 -20 大小 , 相当于当前窗口 +20 向上
@@ -159,12 +159,12 @@ alt + shift - 9 : yabai -m window --space 9; yabai -m space --focus 9
 # Focus display focused before the current one (so you can alternate)
 # ctrl + alt : yabai -m display --focus recent
 # Focus previous display by arrangement index
-ctrl + shift - h : yabai -m display --focus prev
+ctrl - h : yabai -m display --focus prev
 # Focus next display by arrangement index
-ctrl + shift - l : yabai -m display --focus next
+ctrl - l : yabai -m display --focus next
 
 # 旋转窗口布局
-alt - r : yabai -m space --rotate 90
+alt -r : yabai -m space --rotate 90
 
 # 全屏
 alt -f : yabai -m window --toggle zoom-fullscreen
