modify: tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,13 @@
-bind R source-file ~/.tmux.conf ; display-message "Config reloaded.."
+set -g default-terminal "xterm-256color"
 
 set -g prefix C-a
 unbind C-b
+bind-key C-a send-prefix
+
+
+# 使用 C-a R 触发重新加载配置 
+unbind r
+bind r source-file ~/.tmux.conf
 
 # 用 vim 的方式在窗格间移动光标
 unbind-key j
@@ -17,9 +23,18 @@ unbind-key l
 bind-key l select-pane -R
 
 # 开启鼠标模式
-#set-option -g mouse on
-# 允许鼠标选取窗格
-#set -g mouse-select-pane on
+set -g mouse on
+
+# 复制模式下使用vi
+# <prefix> + [ 进入复制模式
+# ctrl + c 退出复制模式
+set-window-option -g mode-keys vi
+
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
 
 # resize pane
 bind -r ^k resizep -U 10 # upward (prefix Ctrl+k)
@@ -27,9 +42,27 @@ bind -r ^j resizep -D 10 # downward (prefix Ctrl+j)
 bind -r ^h resizep -L 10 # to the left (prefix Ctrl+h)
 bind -r ^l resizep -R 10 # to the right (prefix Ctrl+l)
 
+# 设置最大化 pane
+bind -r m resize-pane -Z
+
 # 分屏设置
 unbind '"'
 bind - splitw -v # vertical split
 
 unbind %
 bind | splitw -h # horizontal split
+
+# git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+# 插件管理器  <prefix> + shift + i 插件加载
+set -g @plugin 'tmux-plugins/tpm'
+
+# list of tmux plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'jimeh/tmux-themepack'
+
+set -g @themepack 'powerline/default/cyan'
+
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
