--- a/tmux.conf
+++ b/tmux.conf
@@ -59,6 +59,8 @@ set -g @plugin 'tmux-plugins/tpm'
 # list of tmux plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'jimeh/tmux-themepack'
+set -g @plugin 'tmux-plugins/tmux-resurreect'  # 重启电脑保存会话
+set -g @plugin 'tmux-plugins/tmux-continuum'   # 自动保存会话，每15分钟保存
 
 set -g @themepack 'powerline/default/cyan'
 
