modify: tmux config

--- a/tmux.conf
+++ b/tmux.conf
@@ -63,6 +63,8 @@ set -g @plugin 'tmux-plugins/tmux-resurreect'  # 重启电脑保存会话
 set -g @plugin 'tmux-plugins/tmux-continuum'   # 自动保存会话，每15分钟保存
 
 set -g @themepack 'powerline/default/cyan'
+set -g @rescurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
 
 
 
